@@ -2,76 +2,75 @@ package org.iesalandalus.programacion.alquilervehiculos.modelo.negocio;
 
 import java.util.ArrayList;
 import java.util.List;
-
 import javax.naming.OperationNotSupportedException;
-
 import org.iesalandalus.programacion.alquilervehiculos.modelo.dominio.Cliente;
 
 public class Clientes {
-   //crear atributo coleccioneCliente tipo list//
-	private List<Cliente> coleccioneCliente;
-	
+
+
+	private List<Cliente> coleccionClientes;
+    //constructor por defecto que crea el arraylist
 
 	public Clientes() {
-		coleccioneCliente = new ArrayList<>();
+		coleccionClientes = new ArrayList<>();
 	}
 
-	
 	public List<Cliente> get() {
-		return new ArrayList<Cliente>(coleccioneCliente);
+		return new ArrayList<>(coleccionClientes);
 	}
+    //voy a utlizar un metodo de arraylist (.size) para saber la cantidad de una lista
 
 	public int getCantidad() {
-		return coleccioneCliente.size();
+		return coleccionClientes.size();
 	}
+    //voy a utlizar un metodo de arraylist (.Add) para añadir un valor a la lista
 
 	public void insertar(Cliente cliente) throws OperationNotSupportedException {
 		if (cliente == null) {
 			throw new NullPointerException("ERROR: No se puede insertar un cliente nulo.");
 		}
 
-		if (coleccioneCliente.contains(cliente)) {
+		if (coleccionClientes.contains(cliente)) {
 			throw new OperationNotSupportedException("ERROR: Ya existe un cliente con ese DNI.");
 		}
 
-		coleccioneCliente.add(cliente);
+		coleccionClientes.add(cliente);
 	}
-       //metodo buscar//
+     //voy a utlizar un metodo de Arraylist (.get) para buscar un valor en la lista
 	public Cliente buscar(Cliente cliente) {
 		if (cliente == null) {
 			throw new NullPointerException("ERROR: No se puede buscar un cliente nulo.");
 		}
-		if (coleccioneCliente.contains(cliente)) {
-			return cliente;
-		}
-		return null;
+		int indice = coleccionClientes.indexOf(cliente);
+		return indice == -1 ? null : coleccionClientes.get(indice);
 	}
-      //metodo borrar//
+	   //voy a utilizar un metodo de arraylist (.remove) para borrar un elemento de la lista
+
 	public void borrar(Cliente cliente) throws OperationNotSupportedException {
 
 		if (cliente == null) {
 			throw new NullPointerException("ERROR: No se puede borrar un cliente nulo.");
 		}
-		if (!coleccioneCliente.contains(cliente)) {
+		if (!coleccionClientes.contains(cliente)) {
 			throw new OperationNotSupportedException("ERROR: No existe ningún cliente con ese DNI.");
 		}
-		coleccioneCliente.remove(cliente);
+		coleccionClientes.remove(cliente);
 	}
-     //metodo modificar//
+       // voy a utilizar un metodo de Arraylist (.set()) para modificar una lista
 	public void modificar(Cliente cliente, String nombre, String telefono) throws OperationNotSupportedException {
 
 		if (cliente == null) {
 			throw new NullPointerException("ERROR: No se puede modificar un cliente nulo.");
 		}
-		if (!coleccioneCliente.contains(cliente)) {
+		Cliente clienteBusc = buscar(cliente);
+		if (clienteBusc == null) {
 			throw new OperationNotSupportedException("ERROR: No existe ningún cliente con ese DNI.");
 		} else {
-			if (nombre != null && !nombre.trim().isEmpty()) {
-				cliente.setNombre(nombre);
+			if (nombre != null && !nombre.isBlank()) {
+				clienteBusc.setNombre(nombre);
 			}
-
-			if (telefono != null && !telefono.trim().isEmpty()) {
-				cliente.setTelefono(telefono);
+			if (telefono != null && !telefono.isBlank()) {
+				clienteBusc.setTelefono(telefono);
 			}
 		}
 
